# esmerald-admin

./: .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test-suite.yml
docs/: authentication.md  contributing.md  example.md  index.md  release-notes.md  sponsorship.md
docs_src/auth/: edgy.py  example.py  permissions.py  permissions_edgy.py
docs_src/example/: admin.py  app.py  app_updated.py  createsuperuser.py  models.py  settings.py  urls.py  views.py
docs_src/quickstart/: app.py  edgy_models.py  models.py
docs_src/quickstart/organised/: admin.py  app.py  edgy_models.py  saffier_models.py  settings.py
esmerald_admin/: __init__.py  application.py
esmerald_admin/backends/: base.py  email.py  username.py
esmerald_admin/backends/edgy/: base.py  email.py  username.py
esmerald_admin/backends/saffier/: __init__.py  base.py  email.py  username.py
esmerald_admin/contrib/esmerald/: utils.py
esmerald_admin/contrib/esmerald/backends/: base.py  email.py  username.py
scripts/: check  clean  install  lint  publish
tests/: settings.py
tests/test_integrations/: conftest.py  test_authentication.py  test_edgy_authentication.py  test_saffier_authentication.py
tests/test_views/: test_edgy_views_async.py  test_saffier_views_async.py
