[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esmerald_admin"
description = "The needed admin for Saffier ORM with Esmerald"
long_description = "The needed admin for Saffier ORM with Esmerald"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ['version']
license = "MIT"
authors = [{ name = "Tiago Silva", email = "tiago.arasilva@gmail.com" }]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "esmerald[jwt]>=1.2.5",
    "pydantic>=1.10.9,<2.0",
    "saffier>=0.11.0",
    "sqladmin>=0.12.0,<1.0",
]
keywords = ["esmerald_admin"]

[project.urls]
Homepage = "https://github.com/tarsil/esmerald-admin"
Documentation = "https://esmerald-admin.tarsild.io"
Changelog = "https://esmerald-admin.tarsild.io/release-notes/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/tarsil/esmerald-admin"

[project.optional-dependencies]
test = [
    "anyio>=3.6.2,<4.0.0",
    "autoflake>=2.0.2,<3.0.0",
    "black>=23.3.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.1.0,<2.0.0",
    "pytest>=7.2.2,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "requests>=2.28.2",
    "ruff>=0.0.256,<1.0.0",
    "saffier[postgres,testing]>=0.12.0",
]

dev = [
    "ipdb>=0.13.13,<1.0.0",
    "pre-commit>=3.3.1,<4.0.0",
    "types-python-jose>=3.3.4.7",
]

doc = [
    "mkautodoc>=0.2.0,<0.3.0",
    "mkdocs>=1.4.2,<2.0.0",
    "mkdocs-material==9.1.5",
    "mdx-include>=1.4.1,<2.0.0",
    "mkdocs-markdownextradata-plugin>=0.1.7,<0.3.0",
    "mkdocstrings>=0.19.0,<0.21.0",
    "pyyaml>=5.3.1,<7.0.0",
]

[tool.hatch.version]
path = "esmerald_admin/__init__.py"

[tool.isort]
profile = "black"
known_third_party = []
src_paths = ["esmerald_admin"]

[tool.mypy]
strict = true
disallow_any_generics = false
disallow_untyped_decorators = true
implicit_reexport = true
disallow_incomplete_defs = true
disable_error_code = "attr-defined"
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[[tool.mypy.overrides]]
module = "esmerald_admin.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "docs_src.*"
ignore_errors = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
junit_family = "xunit2"

[tool.hatch.build.targets.sdist]
include = ["/esmerald_admin"]
